ACPI: Unneccessary to scan the PCI bus already scanned.

http://bugzilla.kernel.org/show_bug.cgi?id=10124

this change:

  commit 08f1c192c3c32797068bfe97738babb3295bbf42
  Author: Muli Ben-Yehuda <muli@il.ibm.com>
  Date:   Sun Jul 22 00:23:39 2007 +0300

     x86-64: introduce struct pci_sysdata to facilitate sharing of ->sysdata

     This patch introduces struct pci_sysdata to x86 and x86-64, and
     converts the existing two users (NUMA, Calgary) to use it.

     This lays the groundwork for having other users of sysdata, such as
     the PCI domains work.

     The Calgary bits are tested, the NUMA bits just look ok.

replaces pcibios_scan_root by pci_scan_bus_parented...

but in pcibios_scan_root we have a check about scanned busses.

Signed-off-by: Zhao Yakui <yakui.zhao@intel.com>
Signed-off-by: Li Shaohua <shaohua.li@intel.com>
Signed-off-by: Yinghai Lu <yhlu.kernel@gmail.com>
Signed-off-by: Ingo Molnar <mingo@elte.hu>